--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Eventland Landingpage</title>
+    <title>Ignite - Bringing Together leaders in Uniersity Recruiting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
@@ -22,20 +22,7 @@
 
   <body data-spy="scroll" data-target=".navbar" data-offset="73">
 
-    <!-- Preloader start -->
-    <div id="preloader">
-      <div class="spinner">
-        <div class="rect1"></div>
-        <div class="rect2"></div>
-        <div class="rect3"></div>
-        <div class="rect4"></div>
-        <div class="rect5"></div>
-      </div>
-      <br>
-      <h1 class="text-center">THE EVENTLAND CONFERENCE</h1>
-      <h2 class="text-center">please wait preload page...</h2>
-    </div>
-    <!-- Preloader end -->
+    
     
     <!-- Navigation start -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
