--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
         <div class="event-info-date">
           <div class="event-countdown"></div>
-          <h1>The Eventland Conference</h1>
-          <h2>From the 20th of September to the 12th of October</h2>
+          <h1>Ignite University Recruiting - Tech</h1>
+          <h2>June 21, 2016r</h2>
         </div>
 
         <div class="clearfix"></div>
