--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="event-info-date">
           <div class="event-countdown"></div>
           <h1>Ignite University Recruiting - Tech</h1>
-          <h2>June 21, 2016r</h2>
+          <h2>June 21, 2016</h2>
         </div>
 
         <div class="clearfix"></div>
@@ -110,7 +110,7 @@
           </div>
           <div class="col-md-6 pull-left">
             <h2>About the Conference</h2>
-            <h3>EventLand is a great place to publish your event, meeting or conference!</h3>
+            <h3>IgniteURx is a great place to publish your event, meeting or conference!</h3>
             <p>Here is an example with one single photo displayed on the right. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, vero voluptas delectus explicabo maxime ad qui incidunt! Saepe.</p>
             <div class="buttons">
@@ -129,16 +129,16 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <h2>Keynote Speakers</h2>
-            <h3>Here is the full list of speakers at the Eventland Conference</h3>
+            <h3>Here is the full list of speakers at the IgniteURx Conference</h3>
           </div>
         </div>
         <div class="row speakers">
           <div class="col-md-4">
             <div class="speaker text-center">
               <div class="img"><img class="img-responsive" src="img/speaker1.jpg" alt="Speaker Image"></div>
-              <div class="name">Mike Smith</div>
-              <div class="company">CEO OF COOL COMPANY INC.</div>
-              <div class="description">Lorem ipsum dolor sit amet, sectetur adipiscing elit. Nam faucibus nisi non nunc pharetra viverra nec eget ligula.</div>
+              <div class="name">Jose Cong</div>
+              <div class="company">Founder & CEO OF Stealth Mode</div>
+              <div class="description"> Jose is a vertan in the tech indudstry. He has built wining teams and created lasting cultures at both Apple and Nest (Acquired by Google). I can't code and can't design HW but what I can do is to help to design overachieving teams that ship product. Projects in my career include iPod, iPhone, RF/Wireless Engineering, Apple's Camera Design, Acoustics Engineering, and now Nest's built out from the ground up (30 to ~900 employees).</div>
               <div class="socialmedia">
                 <a href="#" class="btn"><i class="fa fa-facebook"></i></a>
                 <a href="#" class="btn"><i class="fa fa-twitter"></i></a>
@@ -411,7 +411,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h3>Eventland Conference is Presented by</h3>
+          <h3>IgniteURx Conference is Presented by</h3>
         </div>
       </div>
       <div class="row">
@@ -697,7 +697,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <p>Copyright &copy; 2013 Eventland Designed by themeinjection</p>
+        <p>Copyright &copy; 2013 IgniteURx Designed by themeinjection</p>
       </div>
       <div class="col-md-6">
         <div class="socialmedia pull-right">
