--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
           <div class="col-md-4">
             <div class="speaker text-center">
               <div class="img"><img class="img-responsive" src="img/speaker1.jpg" alt="Speaker Image"></div>
-              <div class="name">Jose Cong</div>
+              <div class="name">Jose Benitez Cong</div>
               <div class="company">Founder & CEO OF Stealth Mode</div>
-              <div class="description"> Jose is a vertan in the tech indudstry. He has built wining teams and created lasting cultures at both Apple and Nest (Acquired by Google). I can't code and can't design HW but what I can do is to help to design overachieving teams that ship product. Projects in my career include iPod, iPhone, RF/Wireless Engineering, Apple's Camera Design, Acoustics Engineering, and now Nest's built out from the ground up (30 to ~900 employees).</div>
+              <div class="description"> Jose  has been part of talent strategies behind some of the most recognized companies and consumer electronics products in history. He has built wining teams and created lasting cultures at both Apple, Nest, and Google. He is the first to admit that he can't code and can't design but what he can do is help to design overachieving teams that ship product. He has been involved with teams that worked on the iPod, iPhone, RF/Wireless Engineering, Apple's Camera Design, Acoustics Engineering, and took Nest from 30 to ~900 employees and an acquisition by Google. A consistent theme throughout his success has been a strong university recruiting strategy. We are excited to have Jose as the inaugural speaker at Ignite. </div>
               <div class="socialmedia">
                 <a href="#" class="btn"><i class="fa fa-facebook"></i></a>
                 <a href="#" class="btn"><i class="fa fa-twitter"></i></a>
