--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
               <div class="img"><img class="img-responsive" src="img/speaker1.jpg" alt="Speaker Image"></div>
               <div class="name">Jose Benitez Cong</div>
               <div class="company">Founder & CEO OF Stealth Mode</div>
-              <div class="description"> Jose  has been part of talent strategies behind some of the most recognized companies and consumer electronics products in history. He has built wining teams and created lasting cultures at both Apple, Nest, and Google. He is the first to admit that he can't code and can't design but what he can do is help to design overachieving teams that ship product. He has been involved with teams that worked on the iPod, iPhone, RF/Wireless Engineering, Apple's Camera Design, Acoustics Engineering, and took Nest from 30 to ~900 employees and an acquisition by Google. A consistent theme throughout his success has been a strong university recruiting strategy. We are excited to have Jose as the inaugural speaker at Ignite. </div>
+              <div class="description"> Jose has built wining teams and created lasting cultures at some of the most recognized companies and consumer electronics products in history including Apple, Nest, and Google. He is the first to admit that he can't code and can't design but what he can do is recruit and form overachieving teams that ship product. He has been involved with teams that worked on the iPod, iPhone, RF/Wireless Engineering, Apple's Camera Design, Acoustics Engineering, and took Nest from 30 to ~900 employees and an acquisition by Google. A consistent theme throughout his success whether at a tech giant or a startup has been a strong university recruiting strategy. We are excited to have Jose as the inaugural speaker at Ignite. </div>
               <div class="socialmedia">
-                <a href="#" class="btn"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="btn"><i class="fa fa-twitter"></i></a>
+                <a href="http://twitter.com/Jose_Cong" class="btn"><i class="fa fa-twitter"></i></a>
+                <a href="http://twitter.com/Jose_Cong" class="btn"><i class="fa fa-linkedin"></i></a>
                 <a href="#" class="btn"><i class="fa fa-google-plus"></i></a>
               </div>
             </div>
