--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2>Keynote Speakers</h2>
-            <h3>Here is the full list of speakers at the IgniteURx Conference</h3>
+            <h2>Featured Speakers</h2>
+            <!-- <h3>IgniteURx Featured Speakers</h3> -->
           </div>
         </div>
         <div class="row speakers">
@@ -138,7 +138,7 @@
               <div class="img"><img class="img-responsive" src="img/jose_cong.jpg" alt="Speaker Image"></div>
               <div class="name">Jose Benitez Cong</div>
               <div class="company">Founder & CEO OF Stealth Mode</div>
-              <div class="description"> Jose has built wining teams and created lasting cultures at some of the most recognized companies and consumer electronics products in history including Apple, Nest, and Google. He is the first to admit that he can't code and can't design but what he can do is recruit and form overachieving teams that ship product. He has been involved with teams that worked on the iPod, iPhone, RF/Wireless Engineering, Apple's Camera Design, Acoustics Engineering, and took Nest from 30 to ~900 employees and an acquisition by Google. Strong university recruiting strategy and partnerships. </div>
+              <div class="description"> Our keynote speaker Jose Cong has built wining teams and created lasting cultures at some of the most recognized companies and consumer electronics products in history including Apple, Nest, and Google. He is the first to admit that he can't code and can't design but what he can do is recruit and form overachieving teams that ship product. He has been involved with teams that worked on the iPod, iPhone, RF/Wireless Engineering, Apple's Camera Design, Acoustics Engineering, and took Nest from 30 to ~900 employees and an acquisition by Google. Strong university recruiting strategy and partnerships. </div>
               <div class="socialmedia">
                 <a href="http://twitter.com/Jose_Cong" class="btn"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/josecong" class="btn"><i class="fa fa-linkedin"></i></a>
@@ -149,13 +149,13 @@
           <div class="col-md-4">
             <div class="speaker text-center">
              <div class="img"><img class="img-responsive" src="img/speaker2.jpg" alt="Speaker Image"></div>
-             <div class="name">Jane Doe</div>
-             <div class="company">CEO OF COOL COMPANY INC.</div>
-             <div class="description">Lorem ipsum dolor sit amet, sectetur adipiscing elit. Nam faucibus nisi non nunc pharetra viverra nec eget ligula.</div>
+             <div class="name">Farouk Dey</div>
+             <div class="company">AVP and Dean of Career Education Stanford Univeristy</div>
+             <div class="description">Farouk Dey has over 15 years of progressive leadership experience in university student affairs, including career services, residential education, and new student programs.  He is the Associate Vice Provost for Student Affairs and Dean of Career Education at Stanford University, and also serves on the Board of Directors of the National Association for Colleges and Employers (NACE). Throughout his career, Farouk served in leadership roles at Carnegie Mellon University, the University of Florida, National Association for Colleges and Employers (NACE), and American College Personnel Association (ACPA).  He has a PhD in Education in Higher Education Administration and a Specialist degree in Education in Higher Education Administration from the University of Florida, a Master's degree in Counseling Psychology and an MBA from Washington State University, and a Bachelor's degree in Business Administration in Finance from the University of Wisconsin-Milwaukee. His research interests focus on trends in higher education and career services, identity development for underrepresented groups, diversity and multicultural competence, authenticity in leadership and career development, and higher education in developing countries. A native of Algeria, he currently lives in the San Francisco Bay Area with his wife Amel and their two children Ilyas and Yasmine.</div>
              <div class="socialmedia">
-              <a href="#" class="btn"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="btn"><i class="fa fa-twitter"></i></a>
-                <a href="#" class="btn"><i class="fa fa-google-plus"></i></a>
+              <a href="https://twitter.com/faroukdey" class="btn"><i class="fa fa-twitter"></i></a>
+                <a href="http://www.linkedin.com/in/faroukdey" class="btn"><i class="fa fa-linkedin"></i></a>
+                <a href="http://beam.stanford.edu" class="btn"><i class="fa fa-google-link"></i></a>
             </div> 
           </div>
         </div>
