--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
         </div>
         <div class="col-md-4">
           <div class="speaker text-center">
-            <div class="img"><img class="img-responsive" src="img/speaker3.jpg" alt="Speaker Image"></div>
-            <div class="name">Fred Wallet</div>
-            <div class="company">CEO OF COOL COMPANY INC.</div>
-            <div class="description">Lorem ipsum dolor sit amet, sectetur adipiscing elit. Nam faucibus nisi non nunc pharetra viverra nec eget ligula.</div>
+            <div class="img"><img class="img-responsive" src="img/andrew_maguire.jpg" alt="Speaker Image"></div>
+            <div class="name">Andrew Maguire</div>
+            <div class="company">CEO & Founder Looksharp (powering InternMatch)</div>
+            <div class="description">Frustrated with his own experience in college, Andrew founded Looksharp, the largest database of college internships online, in 2009. A graduate of The Columbia University in the City of New York, Andrew has been at the forefront of the technological revolution within university recruiting. He is deeply interested in the intersection between scalable business and social impact, particularly as it relates to the education space.</div>
             <div class="socialmedia">
-              <a href="#" class="btn"><i class="fa fa-facebook"></i></a>
-              <a href="#" class="btn"><i class="fa fa-twitter"></i></a>
+              <a href="https://twitter.com/andykmaguire" class="btn"><i class="fa fa-twitter"></i></a>
+                <a href="http://www.linkedin.com/in/andrewkmaguire" class="btn"><i class="fa fa-linkedin"></i></a>
               <a href="#" class="btn"><i class="fa fa-google-plus"></i></a>
             </div>
           </div>
