--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ignite - Bringing Together leaders in Uniersity Recruiting</title>
+    <title>IgniteURx - Bringing Together leaders in Uniersity Recruiting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><strong>EVENT</strong>LAND</a>
+          <a class="navbar-brand" href="#"><strong>Ignite</strong>URx</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -109,9 +109,9 @@
             <img class="img-responsive" src="img/about.jpg" alt="About the Conference">
           </div>
           <div class="col-md-6 pull-left">
-            <h2>About the Conference</h2>
+            <h2>About IgniteURx</h2>
             <h3>IgniteURx is a great place to publish your event, meeting or conference!</h3>
-            <p>Here is an example with one single photo displayed on the right. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam.</p>
+            <p>WE NEED TO COME UP WITH A BLURB DESCRIBING THE EVENT. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, vero voluptas delectus explicabo maxime ad qui incidunt! Saepe</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, vero voluptas delectus explicabo maxime ad qui incidunt! Saepe.</p>
             <div class="buttons">
               <a href="#program" class="btn btn-color1">Program</a>
@@ -161,14 +161,14 @@
         </div>
         <div class="col-md-4">
           <div class="speaker text-center">
-            <div class="img"><img class="img-responsive" src="img/andrew_maguire.jpg" alt="Speaker Image"></div>
+            <div class="img"><img class="img-responsive" src="img/andrew_maguire.jpeg" alt="Speaker Image"></div>
             <div class="name">Andrew Maguire</div>
             <div class="company">CEO & Founder Looksharp (powering InternMatch)</div>
             <div class="description">Frustrated with his own experience in college, Andrew founded Looksharp, the largest database of college internships online, in 2009. A graduate of The Columbia University in the City of New York, Andrew has been at the forefront of the technological revolution within university recruiting. He is deeply interested in the intersection between scalable business and social impact, particularly as it relates to the education space.</div>
             <div class="socialmedia">
               <a href="https://twitter.com/andykmaguire" class="btn"><i class="fa fa-twitter"></i></a>
                 <a href="http://www.linkedin.com/in/andrewkmaguire" class="btn"><i class="fa fa-linkedin"></i></a>
-              <a href="#" class="btn"><i class="fa fa-google-plus"></i></a>
+              <a href="http://looksharp.com" class="btn"><i class="fa fa-google-link"></i></a>
             </div>
           </div>
         </div>
