--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <div class="col-md-6 pull-left">
             <h2>About IgniteURx</h2>
             <h3>IgniteURx is a great place to publish your event, meeting or conference!</h3>
-            <p>WE NEED TO COME UP WITH A BLURB DESCRIBING THE EVENT. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, vero voluptas delectus explicabo maxime ad qui incidunt! Saepe</p>
+            <p>Jumpstart your technical university recruiting this summer at Ignite University Recruiting - Tech. We are bringing together leaders on both sides of the University Recruiting table. about building meaningful relationships with , partnered with relevant and engaging content, are two of the most important foundations of a social recruiting strategy that will produce results. This year, we’ve crafted an agenda full of discussions to share the knowledge, strategic insights and technologies that will set you up for success in university recruiting.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, vero voluptas delectus explicabo maxime ad qui incidunt! Saepe.</p>
             <div class="buttons">
               <a href="#program" class="btn btn-color1">Program</a>
