--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
           </div>
           <div class="col-md-6 pull-left">
             <h2>About IgniteURx</h2>
-            <h3>IgniteURx is a great place to publish your event, meeting or conference!</h3>
-            <p>Jumpstart your technical university recruiting this summer at Ignite University Recruiting - Tech. We are bringing together leaders on both sides of the University Recruiting table. about building meaningful relationships with , partnered with relevant and engaging content, are two of the most important foundations of a social recruiting strategy that will produce results. This year, we’ve crafted an agenda full of discussions to share the knowledge, strategic insights and technologies that will set you up for success in university recruiting.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, vero voluptas delectus explicabo maxime ad qui incidunt! Saepe.</p>
+            <h3>Connect with leaders on both sides of the university recruiting table.</h3>
+            <p>Jumpstart your technical university recruiting this summer at Ignite University Recruiting - Tech. We are bringing together leaders on both sides of the University Recruiting table. Ignite is about getting a head start on building the meaningful relationships at the core of any succesful UR program.W</p>
+            <p>e have curated a program that partnered with relevant and engaging content, are two of the most important foundations of a social recruiting strategy that will produce results. This year, we’ve crafted an agenda full of discussions to share the knowledge, strategic insights and technologies that will set you up for success in university recruiting.</p>
             <div class="buttons">
               <a href="#program" class="btn btn-color1">Program</a>
               <a href="#speakers" class="btn btn-color2">Speaker</a>
