--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
             <img class="img-responsive" src="img/about.jpg" alt="About the Conference">
           </div>
           <div class="col-md-6 pull-left">
-            <h2>About IgniteUR(Tech)</h2>
+            <h2>About IgniteUR(x)</h2>
             <h3>University Recruiting Starts Here</h3>
-            <p>Ignite University Recruiting(Tech) brings together leaders on both sides of the UR table. Ignite is the where  building and refreshing the meaningful relationships at the core of any succesful UR program.W</p>
-            <p> have curated a program that partnered with relevant and engaging content, are two of the most important foundations of a social recruiting strategy that will produce results. This year, we’ve crafted an agenda full of discussions to share the knowledge, strategic insights and technologies that will set you up for success in university recruiting.</p>
+            <p>Ignite University Recruiting(Tech) brings together leaders on both sides of the UR table. Ignite is where building and refreshing the meaningful relationships at the core of any succesful UR program starts.</p>
+            <p> We have curated a program that partnered with relevant and engaging content, are two of the most important foundations of a social recruiting strategy that will produce results. This year, we’ve crafted an agenda full of discussions to share the knowledge, strategic insights and technologies that will set you up for success in university recruiting.</p>
             <div class="buttons">
               <a href="#program" class="btn btn-color1">Program</a>
               <a href="#speakers" class="btn btn-color2">Speaker</a>
@@ -190,10 +190,10 @@
 
             <!-- Nav tabs start-->
             <ul class="nav nav-tabs">
-              <li class="active"><a href="#tab1" data-toggle="tab">September 16, 2012</a></li>
-              <li><a href="#tab2" data-toggle="tab">September 16, 2012</a></li>
-              <li><a href="#tab3" data-toggle="tab">September 16, 2012</a></li>
-              <li class="dropdown by-speakers">
+              <li class="active"><a href="#tab1" data-toggle="tab">June 21, 2016</a></li>
+             <!--  <li><a href="#tab2" data-toggle="tab">September 16, 2012</a></li>
+              <li><a href="#tab3" data-toggle="tab">September 16, 2012</a></li> -->
+              <!-- <li class="dropdown by-speakers">
                 <a href="#" id="myTabDrop1" class="dropdown-toggle" data-toggle="dropdown">By Speaker <b class="caret"></b></a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="myTabDrop1">
                   <li><a href="#tab4" tabindex="-1" data-toggle="tab">Mike Smith</a></li>
@@ -201,7 +201,7 @@
                   <li><a href="#tab5" tabindex="-1" data-toggle="tab">Fred Wallet</a></li>
                 </ul>
               </li>
-            </ul>
+            </ul> -->
             <!-- Nav tabs end -->
 
             <!-- Tab panes start -->
@@ -210,22 +210,22 @@
               <div class="tab-pane fade in active" id="tab1">
                 <div class="row program-node">
                   <div class="col-md-3">
-                    <div class="time text-center">09:00 am - 10:00 am</div>
+                    <div class="time text-center">8:30 am - 9:30 am</div>
                   </div>
                   <div class="col-md-8">
                     <div class="description">
-                      <h3>Typi non habent claritatem</h3>
-                      <p>Lorem ipsum dolor sit amet, sectetur adipiscing elit. <span class="label label-default">This is an labeled text snippet!</span> Lorem ipsum dolor sit amet, sectetur adipiscing elit. Nam faucibus nisi non nunc pharetra viverra nec eget ligula.</p>
+                      <h3>Registration & Breakfast</h3>
+                      <!-- <p>Chec <span class="label label-default">This is an labeled text snippet!</span> Lorem ipsum dolor sit amet, sectetur adipiscing elit. Nam faucibus nisi non nunc pharetra viverra nec eget ligula.</p> -->
                     </div>
                   </div>
                 </div>
                 <div class="row program-node">
                   <div class="col-md-3">
-                    <div class="time text-center">10:00 am - 11:00 am</div>
+                    <div class="time text-center">9:45 am - 11:00 am</div>
                   </div>
                   <div class="col-md-8">
                     <div class="description">
-                      <h3>Duis autem vel eum</h3>
+                      <h3>Opening Keynote  </h3>
                       <p>Lorem ipsum dolor sit amet, sectetur adipiscing elit. <a class="my-tooltip" href="#" data-toggle="tooltip" title="This is an demo tooltip!">Hover over me</a> Nam tooltip nisi non nunc pharetra viverra nec eget ligula.Lorem ipsum dolor sit amet, sectetur adipiscing elit.</p>
                     </div>
                   </div>
