--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
                 <ul class="dropdown-menu" role="menu" aria-labelledby="myTabDrop1">
                   <li><a href="#tab4" tabindex="-1" data-toggle="tab">Mike Smith</a></li>
                   <li><a href="#tab5" tabindex="-1" data-toggle="tab">Jane Doe</a></li>
-                  <li><a href="#tab5" tabindex="-1" data-toggle="tab">Fred Wallet</a></li>
+                  <li><a href="#tab5" tabindex="-1" data-toggle="tab">Fred Wallet</a></li> -->
                 </ul>
               </li>
-            </ul> -->
+            </ul>
             <!-- Nav tabs end -->
 
             <!-- Tab panes start -->
