--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </div>
                 <div class="row program-node">
                   <div class="col-md-3">
-                    <div class="time text-center">9:45 am - 11:00 am</div>
+                    <div class="time text-center">9:45 am - 10:45 am</div>
                   </div>
                   <div class="col-md-8">
                     <div class="description">
@@ -232,12 +232,12 @@
                 </div>
                 <div class="row program-node">
                   <div class="col-md-3">
-                    <div class="time text-center">13:00 pm - 14:00 pm</div>
+                    <div class="time text-center">11:00 am - 12:00 pm</div>
                   </div>
                   <div class="col-md-8">
                     <div class="description">
-                      <h3>Typi non habent claritatem</h3>
-                      <p>Lorem ipsum dolor sit amet, sectetur adipiscing elit. Nam faucibus nisi non nunc pharetra viverra nec eget ligula.Lorem ipsum dolor sit amet, sectetur adipiscing elit. Nam faucibus nisi non nunc pharetra viverra nec eget ligula.</p>
+                      <h3>Breakout Session 1</h3>
+                      <p>Who you need to know on campus and why. <span class="label label-default">Recruiter Track</span> A Q&A panel of leading university administrators who faccilitate university recruiting through support of student gropus and programming. Moderated by Insert Name, panelists will discuss their work and best practices around navigation the multiple channells on campus.</p>
                     </div>
                   </div>
                 </div>
