--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 </div>
                 <div class="row program-node">
                   <div class="col-md-3">
-                    <div class="time text-center">11:00 am - 12:00 pm</div>
+                    <div class="time text-center">11:00 am - 12:15 pm</div>
                   </div>
                   <div class="col-md-8">
                     <div class="description">
@@ -243,12 +243,12 @@
                 </div>
                 <div class="row program-node">
                   <div class="col-md-3">
-                    <div class="time text-center">15:00 pm - 16:00 pm</div>
+                    <div class="time text-center">12:30 pm - 1:45 pm</div>
                   </div>
                   <div class="col-md-8">
                     <div class="description">
-                      <h3>Duis autem vel eum</h3>
-                      <p>Lorem ipsum dolor sit amet, sectetur adipiscing elit. Nam tooltip nisi non nunc pharetra viverra nec eget ligula.Lorem ipsum dolor sit amet, sectetur adipiscing elit.</p>
+                      <h3>Lunch</h3>
+                      <p>Enjoy lunch catered by {Insert Food Sponsor} as attendees share their funniest stories from the the trail</p>
                     </div>
                   </div>
                 </div>
@@ -257,34 +257,34 @@
               <div class="tab-pane fade" id="tab2">
                 <div class="row program-node">
                   <div class="col-md-3">
-                    <div class="time text-center">10:00 am - 11:00 am</div>
+                    <div class="time text-center">2:00 pm - 3:15 pm</div>
                   </div>
                   <div class="col-md-8">
                     <div class="description">
-                      <h3>Duis autem vel eum</h3>
-                      <p>Lorem ipsum dolor sit amet, sectetur adipiscing elit. Nam tooltip nisi non nunc pharetra viverra nec eget ligula.Lorem ipsum dolor sit amet, sectetur adipiscing elit.</p>
+                      <h3>Working with Students Groups</h3>
+                      <p>Student panel, sectetur adipiscing elit. Nam tooltip nisi non nunc pharetra viverra nec eget ligula.Lorem ipsum dolor sit amet, sectetur adipiscing elit.</p>
                     </div>
                   </div>
                 </div>
                 <div class="row program-node">
                   <div class="col-md-3">
-                    <div class="time text-center">12:00 am - 13:00 pm</div>
+                    <div class="time text-center">3:30 pm - 4:45 pm</div>
                   </div>
                   <div class="col-md-8">
                     <div class="description">
-                      <h3>Typi non habent claritatem</h3>
-                      <p>Lorem ipsum dolor sit amet, sectetur adipiscing elit. Nam faucibus nisi non nunc pharetra viverra nec eget ligula.Lorem ipsum dolor sit amet, sectetur adipiscing elit. Nam faucibus nisi non nunc pharetra viverra nec eget ligula.</p>
+                      <h3>Closing Keynote</h3>
+                      <p>Farouk Dey will discuss the , sectetur adipiscing elit. Nam faucibus nisi non nunc pharetra viverra nec eget ligula.Lorem ipsum dolor sit amet, sectetur adipiscing elit. Nam faucibus nisi non nunc pharetra viverra nec eget ligula.</p>
                     </div>
                   </div>
                 </div>
                 <div class="row program-node">
                   <div class="col-md-3">
-                    <div class="time text-center">14:00 pm - 16:00 pm</div>
+                    <div class="time text-center">5:00 pm - 6:30 pm</div>
                   </div>
                   <div class="col-md-8">
                     <div class="description">
-                      <h3>Duis autem vel eum</h3>
-                      <p>Lorem ipsum dolor sit amet, sectetur adipiscing elit. Nam tooltip nisi non nunc pharetra viverra nec eget ligula.Lorem ipsum dolor sit amet, sectetur adipiscing elit.</p>
+                      <h3>Happy Hour</h3>
+                      <p>Join us for happy hour at Shinola Detroit in downtown Palo Alto.</p>
                     </div>
                   </div>
                 </div>
