--- a/index.html
+++ b/index.html
@@ -252,6 +252,39 @@
                     </div>
                   </div>
                 </div>
+                <div class="row program-node">
+                  <div class="col-md-3">
+                    <div class="time text-center">2:00 pm - 3:15 pm</div>
+                  </div>
+                  <div class="col-md-8">
+                    <div class="description">
+                      <h3>Working with Students Groups</h3>
+                      <p>Student panel, sectetur adipiscing elit. Nam tooltip nisi non nunc pharetra viverra nec eget ligula.Lorem ipsum dolor sit amet, sectetur adipiscing elit.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="row program-node">
+                  <div class="col-md-3">
+                    <div class="time text-center">3:30 pm - 4:45 pm</div>
+                  </div>
+                  <div class="col-md-8">
+                    <div class="description">
+                      <h3>Closing Keynote</h3>
+                      <p>Farouk Dey will discuss the , sectetur adipiscing elit. Nam faucibus nisi non nunc pharetra viverra nec eget ligula.Lorem ipsum dolor sit amet, sectetur adipiscing elit. Nam faucibus nisi non nunc pharetra viverra nec eget ligula.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="row program-node">
+                  <div class="col-md-3">
+                    <div class="time text-center">5:00 pm - 6:30 pm</div>
+                  </div>
+                  <div class="col-md-8">
+                    <div class="description">
+                      <h3>Happy Hour</h3>
+                      <p>Join us for happy hour at Shinola Detroit in downtown Palo Alto.</p>
+                    </div>
+                  </div>
+                </div>
               </div>
 
               <div class="tab-pane fade" id="tab2">
