--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="logo" href="index.html">
                     <!-- logo image  -->
                     <img src="assets/images/logo.png" alt="Logo">
-                    Conference 2016
+                    Ignite 2016
                 </a>
             </div>
 
