--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="bower_components/nivo-lightbox/nivo-lightbox.css">
     <link rel="stylesheet" href="bower_components/nivo-lightbox/nivo-lightbox-theme.css">
     <link rel="stylesheet" href="bower_components/countdown/jquery.countdown.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body data-spy="scroll">
@@ -65,7 +65,7 @@
 
         <h2>25 April, 2015 / Townhall California</h2>
 
-        <h1>Freelancer Conference 2015</h1>
+        <h1>IgniteUR(x) 2016</h1>
 
         <p>First &amp; Largest Conference</p>
 
