--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="bower_components/nivo-lightbox/nivo-lightbox.css">
     <link rel="stylesheet" href="bower_components/nivo-lightbox/nivo-lightbox-theme.css">
     <link rel="stylesheet" href="bower_components/countdown/jquery.countdown.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll">
