--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <title>Ignite</title>
 
     <!-- css -->
-    <!-- <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
-    <link rel="stylesheet" href="bower_components/nivo-lightbox/nivo-lightbox.css">
-    <link rel="stylesheet" href="bower_components/nivo-lightbox/nivo-lightbox-theme.css">
-    <link rel="stylesheet" href="bower_components/countdown/jquery.countdown.css"> -->
+    <link rel="stylesheet" href="nivo-lightbox.css" type="text/css" />
+    <link rel="stylesheet" href="themes/default/default.css" type="text/css" />
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script src="nivo-lightbox.min.js"></script>
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
