--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
   </h1>
     <h2 class="banner-heading">June 21, 2016 | Stanford </h2>
     <p class="p-big col-8-tablet col-6-desktop no-float center-element">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua enim ad minim veniam,
-      quis nostrud.
+      What the FUCK!!!!!
     </p>
     <div class="banner-buttons">
       <a class="button button-primary" href="#"><span class="icon icon-right chevron-right">Register</span></a>
