--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </svg>
 
   </h1>
-    <h2 class="banner-heading">June 21, 2016 | Stanford </h2>
+    <h2 class="banner-heading">June 21, 2016 | Stanford U </h2>
     <p class="p-big col-8-tablet col-6-desktop no-float center-element">
       What the FUCK!!!!!
     </p>
