--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     
       <div id="header-bg-fade">
         <!-- Header background images -->
-        <img class="img-fade" src="img/header-bg-3.jpg">
+        <img class="img-fade" src="img/goldengate.jpg">
         <img class="img-fade" src="img/header-bg-1.jpg">
         <img class="img-fade" src="img/header-bg-2.jpg">
       </div>
