--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       <div id="header-bg-fade">
         <!-- Header background images -->
         <img class="img-fade" src="img/goldengate.jpg">
-        <img class="img-fade" src="img/header-bg-1.jpg">
-        <img class="img-fade" src="img/header-bg-2.jpg">
+        <img class="img-fade" src="img/goldengate.jpg">
+        <img class="img-fade" src="img/goldengate.jpg">
       </div>
       
 
