--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">IgniteUR(x)</h1>
-                        <p class="intro-text">one day conference where the most influential people in tech university recruiting from top engineering colleges, companies and startups will come together. You will connect with movers and shakers at these core schools and learn best proactices from top tech interns, former tech recruiters and higher ed administrators that get it. A no b.s. gathering where you will meet the people you need to know and learn strategies to elevate your university recruiting efforts.</p>
+                        <h2 class="brand-heading">Ignite UR(x)</h2>
+                        <p class="intro-text">Bringing together the most influential people on both sides of the tech university recruiting table. </p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -89,10 +89,10 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h2>About Ignite</h2>
+                <p><a href="http://eventbrite.com">For Recruiters</a> Connect with the key university contacts at your core schools, learn what works and what doesn't from top engineering students.   </p>
+                <p><a href="http://eventbrite.com">For Higher Ed Leaders</a> share best practices with your peer institutions,grow your employer base, and create new exciting opportunities for your students. </p>
+                <p></p>
             </div>
         </div>
     </section>
@@ -102,9 +102,9 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>Register for Ignite</h2>
+                    <p>We are excited to have you join us either on-Site at Stanford University or virtually through our live stream. </p>
+                    <a href="http://eventbrite.com/" class="btn btn-default btn-lg">Visit Registration Page</a>
                 </div>
             </div>
         </div>
@@ -114,32 +114,32 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Contact the Ignite Team </h2>
+                <p>Feel free to email us with any questions or to request more information. </p>
+                <p><a href="mailto:igniteurx@gmail.com">igniteurx@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://twitter.com/igniteurx" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                     <li>
                         <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
     </section>
 
     <!-- Map Section -->
-    <div id="map"></div>
+    <!-- <div id="map"></div> -->
 
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
+            <p>Copyright &copy; Ignite UR(x) 2016</p>
         </div>
     </footer>
 
