--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Ignite</h2>
+                 <p>Jumpstart your technical university recruiting this summer at Ignite University Recruiting(Tech). We are bringing together leaders on both sides of the tech university Recruiting table. Ignite is about creating the meaningful relationships that are the foundation of any succescful university recruiting program. In addition to the amazing networking opportunities, we have crafted an agenda full of programming that will allow you to share and gain the knowledge, strategic insights and technologies that will set you up for success in university recruiting. <p>
+
                 <p><a href="http://eventbrite.com">For Recruiters</a> Connect with the key university contacts at your core schools, learn what works and what doesn't from top engineering students.   </p>
                 <p><a href="http://eventbrite.com">For Higher Ed Leaders</a> share best practices with your peer institutions,grow your employer base, and create new exciting opportunities for your students. </p>
                 <p></p>
