--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                  <h1 >UR(x)</h1>
                  <h3>The Tech University Recruiting Conference </h3>
                  
-                 <h4>December 5-6, 2016 | Stanford University</h4>
+                 <h3>December 5 - 6, 2016 | Stanford University</h3>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                 
                 <hr>
