--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="header-content-inner">
                 <h1>UR(x)</h1>
                 
-                <p>The Tech University Recruiting Conference </p>
+                <p>The University Recruiting Conference </p>
                 <hr>
                 <p>December 5-6, 2016 | Stanford University</p>
 
