--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
       <div class="col-lg-12 text-center">
 
           <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-          <p><a href="mailto:igniteurx@gmail.com">igniteurx@gmail.com</a></p>
+          <p><a href="mailto:urxconference@gmail.com">team@urxconference.com</a></p>
                 </div>
             </div>
         </div>
