--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!-- /.container-fluid -->
     </nav>
 
-   <!--  <header>
+    <header>
         <div class="header-content">
             <div class="header-content-inner">
                 <h1>UR(x)</h1>
@@ -94,7 +94,7 @@
             </div>
             </div>
         </div>
-    </header> -->
+    </header>
 
     <section class="schedule" id="about">
         <div class="container">
